--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -13,6 +13,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-consul-starter</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
