--- a/account/pom.xml
+++ b/account/pom.xml
@@ -16,9 +16,14 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
-			<artifactId>camel-netty4-http</artifactId>
+			<artifactId>camel-netty-http</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+				<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-http</artifactId>
+			<version>${camel.version}</version>
+			</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-swagger-java</artifactId>
