--- a/account/pom.xml
+++ b/account/pom.xml
@@ -19,15 +19,20 @@
 			<artifactId>camel-netty4-http</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
-		<dependency>
+				<dependency>
 			<groupId>org.apache.camel</groupId>
-			<artifactId>camel-swagger-java</artifactId>
+			<artifactId>camel-http</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.camel</groupId> -->
+<!-- 			<artifactId>camel-swagger-java</artifactId> -->
+<!-- 			<version>${camel.version}</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.hibernate</groupId> -->
+<!-- 			<artifactId>hibernate-validator</artifactId> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-consul-starter</artifactId>
