--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -18,6 +18,11 @@
 			<artifactId>camel-consul-starter</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-netty4-http</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
