--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
 		<module>gateway</module>
 		<module>account</module>
 		<module>discovery</module>
+		<module>customer</module>
+		<module>camel-common</module>
 	</modules>
 		
 </project>
