--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>sample-camel-spring-boot</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>account</artifactId>
+	<artifactId>customer</artifactId>
 
 	<dependencies>
 		<dependency>
