--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -26,7 +26,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
-			<artifactId>camel-hystrix</artifactId>
+			<artifactId>camel-hystrix-starter</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-ribbon-starter</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
 		<dependency>
@@ -48,6 +53,11 @@
 			<artifactId>camel-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+    <groupId>com.netflix.archaius</groupId>
+    <artifactId>archaius-core</artifactId>
+    <version>0.7.5</version>
+</dependency>
 	</dependencies>
 
 </project>
