--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>11</java.version>
 		<camel.version>3.6.0</camel.version>
+		<sonar.projectKey>piomin_sample-camel-spring-boot</sonar.projectKey>
+		<sonar.organization>piomin</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencies>
