--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -30,6 +30,11 @@
 			<artifactId>camel-swagger-java-starter</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>pl.piomin.services</groupId>
 			<artifactId>camel-common</artifactId>
 			<version>${project.version}</version>
