--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -3,7 +3,7 @@ camel:
     name: account-service
     main-run-controller: true
   zipkin:
-    host-name: 192.168.99.100
+    host-name: localhost
     port: 9410
     server-service-mappings.direct*: consul-acc-reg
     client-service-mappings.direct*: consul-acc-reg
