--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -8,6 +8,10 @@
 	</parent>
 	<artifactId>gateway</artifactId>
 
+	<properties>
+		<sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
+	</properties>
+
 	<dependencies>	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
