--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -3,8 +3,8 @@ camel:
     name: account-service
     main-run-controller: true
   zipkin:
-    host-name: 192.168.99.100
-    port: 9410
+    host-name: localhost
+    port: 9411
     server-service-mappings.direct*: consul-acc-reg
     client-service-mappings.direct*: consul-acc-reg
     server-service-mappings.route*: account-service
