--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -31,7 +31,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-swagger-java-starter</artifactId>
+            <artifactId>camel-springdoc-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>org.junit.vintage</groupId>
